tools/tests/fixtures/go-detector-runner/positive/fee_redirect_user_controlled_sink.go
package fixture

type Token interface {
	Transfer(to string, amount uint64)
}

type Vault struct {
	token      Token
	accruedFee uint64
}

func (v *Vault) WithdrawProtocolFee(recipient string) error {
	feeAmount := v.accruedFee
	if feeAmount == 0 {
		return nil
	}
	v.accruedFee = 0
	v.token.Transfer(recipient, feeAmount)
	return nil
}
